(lang dune 3.4)

(using menhir 2.1)

(name stappl)

(generate_opam_files true)

(source
 (github shapespeare/stappl))

(authors "Dohyung Kim")

(maintainers "Dohyung Kim")

;(map_workspace_root false)

(license MIT)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
